--- a/src/App.css
+++ b/src/App.css
@@ -12,10 +12,15 @@
   height: 200px;
   padding: 20px;
   color: white;
+  margin-bottom: 20px
 }
 
 .App-intro {
   font-size: large;
+}
+
+.Button {
+  width: 150px
 }
 
 @keyframes App-logo-spin {
